--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,9 @@
 {{define "home"}} {{ template "header" .}}
 
-<h1>Home</h1>
+<div class="jumbotron pt-4 pb-4">
+    <h1 class="display-3">Home</h1>
+    <p class="lead">xx</p>
+</div>
+
 
 {{ template "footer" .}} {{end}}
