--- a/templates/login.html
+++ b/templates/login.html
@@ -2,4 +2,14 @@
 
 <h1>Login</h1>
 
+<p>We are going to need some access to your Spotify account</p>
+
+<p>
+    <a href="/login?auth=1">
+        <img id="connect" src="/assets/connect.svg" alt="Connect With Spotify" style="height: 30px;">
+    </a>
+</p>
+
+<p>To revoke our permissions at a later date, you can do so on the <a href="https://www.spotify.com/uk/account/apps/" target="_blank">Spotify website</a>.</p>
+
 {{ template "footer" .}} {{end}}
