Finish shuffle and info pages

--- a/templates/info.html
+++ b/templates/info.html
@@ -1,6 +1,7 @@
 {{define "info"}} {{ template "header" .}}
 
 <h1>Info</h1>
-<p>xx</p>
+<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go</p>
+<p>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page</p>
 
 {{ template "footer" .}} {{end}}
