--- a/templates/header.html
+++ b/templates/header.html
@@ -30,7 +30,7 @@
                 <li class="nav-item"><a class="nav-link" href="/info">Info</a></li>
                 <li class="nav-item">
                     {{if .LoggedIn}}
-                    <a class="nav-link" href="/logout">Logout</a>
+                    <a class="nav-link" href="/logout">Logout {{.LoggedInID}}</a>
                     {{else}}
                     <a class="nav-link" href="/login">Login</a>
                     {{end}}
