--- a/templates/duplicates.html
+++ b/templates/duplicates.html
@@ -2,4 +2,37 @@
 
 <h1>Duplicates</h1>
 
+{{ if .LoggedIn}}
+<table class="table table-hover table-sm">
+    <thead>
+    <tr>
+        <th scope="col">Playlist</th>
+        <th scope="col">Owner</th>
+        <th scope="col">Tracks</th>
+        <th scope="col">Filter</th>
+    </tr>
+    </thead>
+    <tbody>
+    {{ range $key, $value := .Playlists }}
+    <tr class="{{if eq $.Highlight .ID}}table-primary{{end}}">
+        <td>{{ .Name }}</td>
+        <td>{{ .Owner.ID }}</td>
+        <td>{{ .Tracks.Total }} tracks</td>
+        <td>
+            {{ if gt .Tracks.Total 1 }}
+            <a class="btn btn-primary btn-sm" href="/duplicates" role="button">New Playlist</a>
+            {{ if eq $.LoggedInID .Owner.ID }}
+            <a class="btn btn-primary btn-sm" href="/duplicates" role="button">Remove Duplicates</a>
+            {{ end }}
+            {{ end }}
+        </td>
+    </tr>
+    {{ end }}
+
+    </tbody>
+</table>
+{{else}}
+x
+{{end}}
+
 {{ template "footer" .}} {{end}}
