Fix tracks not being added back

--- a/templates/duplicates.html
+++ b/templates/duplicates.html
@@ -1,6 +1,8 @@
 {{define "duplicates"}} {{ template "header" .}}
 
 <h1>Duplicates</h1>
+<p>Sometimes you can end up with a lot of songs in your playslists more than once, this tool will remove the
+    duplicates</p>
 
 {{ if .LoggedIn}}
 <table class="table table-hover table-sm">
