--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {{define "home"}} {{ template "header" .}}
 
 <div class="jumbotron pt-4 pb-4">
-    <h1 class="display-3">Home</h1>
-    <p class="lead">xx</p>
+    <h1 class="display-3">Spotify Helper</h1>
+    <p class="lead"></p>
 </div>
 
 
