--- a/templates/shuffle.html
+++ b/templates/shuffle.html
@@ -24,7 +24,7 @@
             {{ if gt .Tracks.Total 1 }}
             <a class="btn btn-primary btn-sm" href="/shuffle/{{.ID}}/1" role="button">New Playlist</a>
             {{ if eq $.LoggedInID .Owner.ID }}
-            <a class="btn btn-primary btn-sm" href="/shuffle/{{.ID}}/0" role="button">Shuffle Playlist</a>
+            <a class="btn btn-primary btn-sm" href="/shuffle/{{.ID}}/0" role="button">Same Playlist</a>
             {{ end }}
             {{ end }}
 
