--- a/templates/header.html
+++ b/templates/header.html
@@ -24,6 +24,7 @@
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item"><a class="nav-link" href="/shuffle">Shuffle</a></li>
                 <li class="nav-item"><a class="nav-link" href="/duplicates">Duplicates</a></li>
+                <li class="nav-item"><a class="nav-link" href="/random">Random Song</a></li>
             </ul>
 
             <ul class="navbar-nav">
