--- a/templates/random.html
+++ b/templates/random.html
@@ -45,7 +45,7 @@
 
 
 {{else}}
-    Logged Out
+    Please login so we can access the Spotify database with your account
 {{end}}
 
 {{ template "footer" .}} {{end}}
