--- a/templates/duplicates.html
+++ b/templates/duplicates.html
@@ -17,8 +17,8 @@
     <tbody>
     {{ range $key, $value := .Playlists }}
     <tr class="{{if eq $.Highlight .ID}}table-primary{{end}}">
-        <td>{{ .Name }}</td>
-        <td>{{ .Owner.ID }}</td>
+        <td><a href="/user/{{ .Owner.ID }}/playlist/{{ .ID }}">{{ .Name }}</a></td>
+        <td><a href="/user/{{ .Owner.ID }}">{{ .Owner.ID }}</a></td>
         <td>{{ .Tracks.Total }} tracks</td>
         <td>
             {{ if gt .Tracks.Total 1 }}
