--- a/templates/artist.html
+++ b/templates/artist.html
@@ -1,11 +1,9 @@
 {{define "artist"}} {{ template "header" .}}
 
-<a class="btn btn-success float-right" href="https://open.spotify.com/artist/{{ .Artist.ID }}">View on Spotify</a>
+<a class="btn btn-success float-right" target="_blank" href="https://open.spotify.com/artist/{{ .Artist.ID }}">View on Spotify</a>
 
 <h1>{{ .Artist.Name }}</h1>
 
-<div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: {{ .Popularity }}%"></div>
-</div>
+<p>Popularity: {{ .Artist.Popularity }}</p>
 
 {{ template "footer" .}} {{end}}
