--- a/templates/info.html
+++ b/templates/info.html
@@ -1,13 +1,15 @@
 {{define "info"}} {{ template "header" .}}
 
-<h1>Info</h1>
-<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go</p>
-<p>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page</p>
+<h1 class="mb-4">Info</h1>
+
+<h4>What is this website?</h4>
+<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.</p>
+<p>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
 
 <h4>Why do we need access to your spotify?</h4>
 <p>todo</p>
 
 <h4>Other Services</h4>
-<p><a href="https://app.jqbx.fm/">https://app.jqbx.fm/</a></p>
+<p><a target="_blank" href="https://app.jqbx.fm/">https://app.jqbx.fm/</a> - Description... todo</p>
 
 {{ template "footer" .}} {{end}}
