Finish track and album page

--- a/templates/album.html
+++ b/templates/album.html
@@ -3,6 +3,28 @@
 <a class="btn btn-success float-right" target="_blank" href="https://open.spotify.com/album/{{ .Album.ID }}">View on Spotify</a>
 
 <h1>{{ .Album.Name }}</h1>
+<p>Album Type: {{ .Album.AlbumType }}</p>
+<p>Artists: {{ artists .Album.Artists }}</p>
 
+<table class="table table-hover table-sm">
+    <thead>
+    <tr>
+        <th scope="col">Disc/Track</th>
+        <th scope="col">Artists</th>
+        <th scope="col">Title</th>
+        <th scope="col">Duration</th>
+    </tr>
+    </thead>
+    <tbody>
+    {{ range $key, $value := .Album.Tracks.Tracks }}
+    <tr>
+        <td>{{.DiscNumber}}.{{.TrackNumber}}</td>
+        <td>{{artists .Artists}}</td>
+        <td><a href="/track/{{.ID}}">{{.Name}}</a></td>
+        <td>{{seconds .Duration}}</td>
+    </tr>
+    {{ end }}
+    </tbody>
+</table>
 
 {{ template "footer" .}} {{end}}
