--- a/templates/info.html
+++ b/templates/info.html
@@ -3,8 +3,8 @@
 <h1 class="mb-4">Info</h1>
 
 <h4>What is this website?</h4>
-<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.</p>
-<p>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
+<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
+    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
 
 <h4>Why do we need access to your spotify?</h4>
 <p>todo</p>
