--- a/templates/random.html
+++ b/templates/random.html
@@ -71,7 +71,7 @@
             </a>
             <div class="card-body">
                 <h4 class="card-title">{{ .Name }}</h4>
-                <p class="card-text">Type: {{.AlbumType}}</p>
+                <p class="card-text">Type: {{title .AlbumType}}</p>
             </div>
         </div>
     </div>
