--- a/templates/footer.html
+++ b/templates/footer.html
@@ -13,6 +13,11 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"
         integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1"
         crossorigin="anonymous"></script>
+<script src="/assets/jquery.tablesorter.min.js"></script>
+
+<script>
+    $('table.table').tablesorter();
+</script>
 
 </body>
 </html>
