Hide everything if your logged out

--- a/templates/home.html
+++ b/templates/home.html
@@ -5,5 +5,24 @@
     <p class="lead"></p>
 </div>
 
+<h4>What is this website?</h4>
+<p>Spotify Tools is an open source project written by <a href="https://jimeagle.com/">Jim Eagle</a> in Go.
+    <br/>If you wish to run the website locally or contribute, see the <a href="https://github.com/Jleagle/spotifyhelper">GitHub</a> page.</p>
+
+<h4 class="mt-4">Why do we need access to your spotify?</h4>
+<ul>
+    <li>UserReadEmail - We currently do not email or store emails at all, but we may want to collect this in the future.</li>
+    <li>UserReadPrivate</li>
+    <li>PlaylistReadPrivate</li>
+    <li>PlaylistReadCollaborative</li>
+    <li>PlaylistModifyPublic</li>
+    <li>PlaylistModifyPrivate</li>
+</ul>
+
+<h4 class="mt-4">Other Services</h4>
+<p>A collection of other SPotify related websites we like.</p>
+<ul>
+    <li>JQBX: Description... todo - <a target="_blank" href="https://app.jqbx.fm/">https://app.jqbx.fm/</a></li>
+</ul>
 
 {{ template "footer" .}} {{end}}
