--- a/templates/header.html
+++ b/templates/header.html
@@ -29,6 +29,7 @@
                 <li class="nav-item"><a class="nav-link" href="/shuffle">Shuffle</a></li>
                 <li class="nav-item"><a class="nav-link" href="/duplicates">Duplicates</a></li>
                 <li class="nav-item"><a class="nav-link" href="/random">Random</a></li>
+                {{/*<li class="nav-item"><a class="nav-link" href="/unpopular">Unpopular</a></li>*/}}
             {{end}}
             </ul>
 
